# nove

./: .gitignore  PRD.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 174203e25ac3_add_foreign_key_on_user_health_profiles.py  233c5016385d_add_conversations_and_messages.py  247cb49dbe1c_add_lab_tables.py  28b58d42d4c0_initial_schema_users_and_health_profiles.py  b1c4eb901eac_add_garmin_tables.py  f610e00b83f1_add_google_tokens_to_users.py
backend/src/nove/: config.py  database.py  deps.py  main.py
backend/src/nove/auth/: router.py  schemas.py  service.py
backend/src/nove/coach/: models.py  prompts.py  router.py  schemas.py  service.py
backend/src/nove/garmin/: models.py  router.py  schemas.py  service.py
backend/src/nove/labs/: extraction.py  gmail.py  models.py  portal_router.py  router.py  schemas.py  service.py  storage.py
backend/src/nove/users/: models.py  router.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_coach.py  test_garmin.py  test_labs.py
lab-portal/: package-lock.json  package.json
lab-portal/src/app/: layout.tsx  page.tsx
lab-portal/src/lib/: api.ts
marketing/: package-lock.json  package.json
marketing/ads/: README.md
marketing/ads/campaigns/: estilo-activo.json  laboratorios-ia.json  salud-general.json
marketing/ads/scripts/: deploy.ts  validate.ts
marketing/src/app/: globals.css  layout.tsx  page.tsx
marketing/src/lib/: brevo.ts  (+2 more)
web/: package-lock.json
(+35 files in other folders)
